--- a/src/static/scss/components/_diff.scss
+++ b/src/static/scss/components/_diff.scss
@@ -1,6 +1,6 @@
 .diff {
 	margin: 15%;
-	margin-top: 7%;
+	margin-top: 8rem;
 	margin-bottom: 5%;
 	background: #FFFFFF;
 	padding: 2%;
@@ -11,40 +11,32 @@
 	}
 	.texto {
 		text-align: justify;
-		font-weight: 400;
+		font-weight: 200;
 		padding: 2% 10% 2% 10%;
 	}
 	& .texto > .deleted {
 		position: relative;
 		&::after {
-			border-bottom: 0.125em solid rgba(255, 0, 0, 0.5);
+			border-bottom: 0.125em solid rgb(212, 8, 8);
 			content: "";
 			left: 0;
 			line-height: 1em;
 			margin-top: calc(0.125em/2);
 			position: absolute;
 			right: 0;
-			top: 50%; 
+			top: 50%;
 		}
+		background-color: rgb(243, 112, 112);
 	}
 	& .texto > .added {
 		background-color: #2CD27E;
 	}
-	ul {
-		text-align: center;
-		margin-top: 2%
-	}
-	li { 
-		display: inline-block;
-		padding: 20px 0 20px;
-		vertical-align: middle;
-	 }
-	a:hover, a:focus, a:active {
+	& .menu > a:hover, a:focus, a:active {
 	    color: #474747;
 	    text-decoration: none;
 	    font-weight: 400;
 	}
-	a {
+	& .menu > a {
 	    text-decoration: none;
 	    position: relative;
 	    display: block;
@@ -58,7 +50,7 @@
 	    transition: color 0.1s,background-color 0.1s,padding 0.2s ease-in;
 	    color: #AFAFAF;
 	}
-	a::before {
+	& .menu > a::before {
 	    content: '';
 	    display: block;
 	    position: absolute;
@@ -71,7 +63,7 @@
 	    transform: scale(0, 1);
 	    transition: color 0.1s,transform 0.2s ease-out;
 	}
-	a:active::before {
+	& .menu > a:active::before {
 	    background-color: #2EAA68;
 	}
 	a:hover::before, a:focus::before {
@@ -79,4 +71,58 @@
 	    transform: scale(1, 1);
 	    background-color: #2EAA68;
 	}
+
+	& .button {
+		align-items: center;
+		display: flex;
+		justify-content: center;
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		margin-bottom: 2%;
+		font-size: 16px;
+		&--yes {
+			@extend .button;
+			background-color: $yes-button-color;
+			&:hover {
+				background-color: $yes-button-color - 20%;
+			}
+		}
+		&--no {
+			@extend .button;
+			background-color: $no-button-color;
+			margin-left: 2%;
+			margin-right: 1%;
+			&:hover {
+				background-color: $no-button-color - 20%;
+			}
+		}
+	}
+	ul {
+		text-align: center;
+		margin-top: 2%
+	}
+	li { 
+		display: inline-block;
+		padding: 20px 0 20px;
+		vertical-align: middle;
+	 }
+	.congressman-question {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		font-weight: 400;
+		text-align: center;
+		margin: 5%;
+		margin-bottom: 2rem;
+	}
+}
+
+#original {
+	display: none;
+}
+
+#final {
+	display: none;
 }
