--- a/src/templates/pages/diff.html
+++ b/src/templates/pages/diff.html
@@ -5,11 +5,11 @@
 {% block content %}
 <main class="diff">
   <h1 class="title"> Diferença entre textos </h1>
-  <ul>
-    <li class="menu original"><a href="#">ORIGINAL</a></li>
-    <li class="menu diferencas"><a href="#" class=" active">DIFERENÇAS</a></li>
-    <li class="menu final"><a href="#">FINAL</a></li>
-  </ul>
+    <nav>
+      <li class="menu original"><a href="#">ORIGINAL</a></li>
+      <li class="menu diferencas"><a id="diffItem" href="#">DIFERENÇAS</a></li>
+      <li class="menu final"><a href="#">FINAL</a></li>
+    <nav>
 
   <div class="texto" id="diff">
     {% autoescape on %}
