Changing button to whole area be clickable

--- a/src/templates/pages/diff.html
+++ b/src/templates/pages/diff.html
@@ -70,12 +70,17 @@
 Esta é a diferença entre os textos, você concorda?
 </div>
     <div class="button">
-      <div class="button--yes">
-        <a href="http://{{ site_url  }}">SIM</a>
-      </div>
-      <div class="button--no">
-        <a href="http://{{ site_url }}">NÃO</a>
-    </div>
+      <a href="http://{{ site_url  }}">       
+        <div class="button--yes">
+          SIM
+        </div>
+     </a>
+     <a href="http://{{ site_url  }}">       
+        <div class="button--no">
+          NÃO
+        </div>
+      </a>
+
   </div>
 {% endif %}
 </main>
