--- a/src/templates/pages/diff.html
+++ b/src/templates/pages/diff.html
@@ -5,11 +5,11 @@
 {% block content %}
 <main class="diff">
   <h1 class="title"> Diferença entre textos </h1>
-  <ul>
-    <li class="menu original"><a href="#">ORIGINAL</a></li>
-    <li class="menu diferencas"><a href="#" class=" active">DIFERENÇAS</a></li>
-    <li class="menu final"><a href="#">FINAL</a></li>
-  </ul>
+    <nav>
+      <li class="menu original"><a href="#">ORIGINAL</a></li>
+      <li class="menu diferencas"><a id="diffItem" href="#">DIFERENÇAS</a></li>
+      <li class="menu final"><a href="#">FINAL</a></li>
+    <nav>
 
   <div class="texto" id="diff">
     {% autoescape on %}
@@ -70,12 +70,17 @@
 Esta é a diferença entre os textos, você concorda?
 </div>
     <div class="button">
-      <div class="button--yes">
-        <a href="http://{{ site_url  }}">SIM</a>
-      </div>
-      <div class="button--no">
-        <a href="http://{{ site_url }}">NÃO</a>
-    </div>
+      <a href="http://{{ site_url  }}">       
+        <div class="button--yes">
+          SIM
+        </div>
+     </a>
+     <a href="http://{{ site_url  }}">       
+        <div class="button--no">
+          NÃO
+        </div>
+      </a>
+
   </div>
 {% endif %}
 </main>
