--- a/src/templates/emails/participant_invitation.html
+++ b/src/templates/emails/participant_invitation.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-  Você foi convidado para participar de uma proposição
+Você foi convidado para colaborar na edição de uma proposição legislativa!
 {% endblock title %}
 
 {% block img %}
@@ -10,12 +10,11 @@
 {% endblock img %}
 
 {% block content %}
-  <tr class="center">
-    Analise as propostas legislativas e contribua com sugestões de nova redação a artigos ou paragrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!
-  </tr>
-  <tr class="center">
-    Nessa intera&ccedil;&atilde;o, ganha a sociedade, que participa mais ativamente do processo legislativo, e ganha o Parlamento, que aprova leis mais aprimoradas e conectadas &agrave;s necessidades dos cidad&atilde;os.
-  </tr>
+<tr class="center">
+  Opine e sugira alterações na redação dos artigos, parágrafos, incisos e alíneas.
+  Você precisa estar logado no Wikilegis para participar.
+  Clique em aceitar convite para logar ou criar uma nova conta e acessar o texto!
+</tr>
 {% endblock content %}
 
 {% block button %}
