--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -35,6 +35,9 @@
 
   &.-voidselection {
     user-select: none;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
   }
 
   & > h3 {
