--- a/src/templates/components/suggestion-input.html
+++ b/src/templates/components/suggestion-input.html
@@ -12,7 +12,7 @@
         <h3>Digite sua opinião sobre ele:</h3>
       </span>
       <div class="input">
-        <input class="js-input" type="text" name="">
+        <input class="js-input" type="text" name="" id="inputSuggestionModal">
         <div class="send js-send">
           <img class="icon" src="{% static 'img/send.svg' %}">
         </div>
