--- a/src/templates/components/suggestion-input.html
+++ b/src/templates/components/suggestion-input.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="suggestion-input js-suggestionInput">
+<div class="suggestion-input js-suggestionInput" id="suggestionModal">
   <div class="content">
     <button class="close-icon js-close" type="button"><img class="icon" src="{% static 'img/close.svg' %}"></button>
     <h3>Você destacou o trecho:</h3>
