Adding templates email feedback

--- a/src/templates/emails/feedback_authorization.html
+++ b/src/templates/emails/feedback_authorization.html
@@ -28,5 +28,5 @@
 {% endblock content %}
 
 {% block button %}
-    <a href="http://{{ site_url }}{% url 'diff_version' hash_id %}">ACESSAR O WIKILEGIS</a>
+    <a href="http://{{ site_url }}{% url 'diff_version_authorization' hash_id %}">ACESSAR O WIKILEGIS</a>
 {% endblock button %}
