Fixing messages template and remove variable not used

--- a/src/templates/emails/feedback_unauthorization_management2owner.html
+++ b/src/templates/emails/feedback_unauthorization_management2owner.html
@@ -14,7 +14,7 @@
     Devolutiva não autorizada!
   </tr>
   <tr class="center">
-  O órgão gestor analisou a versão do documento selecionada por você e econtrou alguma inconsistência. Por favor, entre em o órgão gestor para mais informações.
+  Foram identificadas algumas inconsistências na versão do documento selecionada por você. Por favor, entre em contato com órgão gestor para que você possa promover as adequações necessárias à publicação da devolutiva.
   </tr>
 {% endblock content %}
 
