--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -35,6 +35,12 @@
 
   &.-voidselection {
     user-select: none;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    -webkit-touch-callout:none;
+    -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
+
   }
 
   & > h3 {
