--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -41,6 +41,7 @@
           <span class="date -active">Aberto até {{ object.closing_date|date:"d/m/Y" }}</span>
           {% else %}
           <span class="date -inactive">Encerrado em {{ object.closing_date|date:"d/m/Y" }}</span>
+          <a class="app-button -green" href="{% url 'group-analysis' object.id object.document.slug %}">Resultado da Participação</a>
           {% endif %}
         </div>
       </div>
